--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "manage-band-landing",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,12 +11,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.0.8",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/netlify": "^3.0.4",
+    "@astrojs/tailwind": "^5.0.2",
+    "astro": "^3.4.3",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.1"
   }
 }
