--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write '**/*.{astro,js,jsx,ts,tsx,json,md}'"
   },
   "dependencies": {
     "@astrojs/netlify": "^3.0.4",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.1"
+    "prettier-plugin-astro": "^0.12.1",
+    "prettier-plugin-organize-imports": "^3.2.3"
   }
 }
