--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write '**/*.{astro,js,jsx,ts,tsx,json,md}'"
+    "format": "prettier --write '**/*.{astro,js,jsx,ts,tsx,json,md,css}'"
   },
   "dependencies": {
     "@astrojs/netlify": "^3.0.4",
