:package: added prettier-plugin-tailwind

--- a/.prettierrc
+++ b/.prettierrc
@@ -17,7 +17,11 @@
   "tabWidth": 2,
   "useTabs": false,
   "embeddedLanguageFormatting": "auto",
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-astro"],
+  "plugins": [
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-astro",
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
       "files": "*.astro",
