--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^3.0.4",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.4.3",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
