--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@astrojs/netlify": "^3.0.4",
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource/inter": "^5.0.15",
+    "@fontsource/kanit": "^5.0.17",
     "astro": "^3.5.2",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.5"
