--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@astrojs/netlify": "^3.0.4",
     "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.4.3",
+    "@fontsource/inter": "^5.0.15",
+    "@fontsource/kanit": "^5.0.17",
+    "astro": "^3.5.2",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
-    "prettier-plugin-organize-imports": "^3.2.3"
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.7"
   }
 }
